After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764870 - qtdemux: Fix parsing segment duration of empty edit list box
qtdemux: Fix parsing segment duration of empty edit list box
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.8.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-04-10 23:35 UTC by Seungha Yang
Modified: 2016-04-13 06:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtdemux: Fix parsing segment duration of empty edit list box (1.04 KB, patch)
2016-04-10 23:36 UTC, Seungha Yang
committed Details | Review

Description Seungha Yang 2016-04-10 23:35:39 UTC
qtdemux: Fix parsing segment duration of empty edit list box

For empty edit, segment-duration in edit list box should not be
used for segment event.
Comment 1 Seungha Yang 2016-04-10 23:36:32 UTC
Created attachment 325691 [details] [review]
qtdemux: Fix parsing segment duration of empty edit list box
Comment 2 Seungha Yang 2016-04-10 23:40:04 UTC
This is a patch for regression of bug #760781
Please refer to 
https://bugzilla.gnome.org/show_bug.cgi?id=760781#c9

bug #760781 did not consider empty edit when checking "zero segment duration" edit
Comment 3 Sebastian Dröge (slomo) 2016-04-11 07:31:07 UTC
Attachment 325691 [details] pushed as faa664b - qtdemux: Fix parsing segment duration of empty edit list box
Comment 4 Sebastian Dröge (slomo) 2016-04-11 07:31:41 UTC
Will backport to 1.8 branch later