qtdemux: Fix parsing segment duration of empty edit list box

For empty edit list, segment-duration in edit list box should not be
used for segment event.

https://bugzilla.gnome.org/show_bug.cgi?id=764870